invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_96.src
.IPPcode24
SETCHAR int@49 int@49 int@49